--- a/src/app/components/main/app.component.html
+++ b/src/app/components/main/app.component.html
@@ -1,12 +1,4 @@
-<h1 highlight>My First Attribute Directive</h1>
-<p >Highlight me!</p>
 
-<div class="row">
-      <div class="col s12 m5">
-        <div class="card-panel teal hoverable">
-          <span class="white-text">I am a very simple card. I am good at containing small bits of information.
-          I am convenient because I require little markup to use effectively. I am similar to what is called a panel in other frameworks.
-          </span>
-        </div>
-      </div>
-    </div>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
