--- a/src/app/components/main/header/header.component.html
+++ b/src/app/components/main/header/header.component.html
@@ -1,3 +1,21 @@
-<p>
-  header works!
-</p>
+<div class="navbar-fixed">
+  <nav>
+    <div class="nav-wrapper  z-depth-1">
+      <a href="/" class="brand-logo"><img class="logo" src="{{logoImg}}" /></a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li class="login-btn"><a class="waves-effect waves-light btn dropdown-button" href='#' data-activates="dropdown1"><i class="fa fa-android left" aria-hidden="true"></i>button</a></li>
+      </ul>
+    </div>
+  </nav>
+</div>
+
+<!-- Dropdown Structure -->
+<ul id="dropdown1" class="dropdown-content">
+  <li><a href="">one</a></li>
+  <li class="divider"></li>
+  <li><a href="">two</a></li>
+  <li class="divider"></li>
+  <li><a href="">three</a></li>
+</ul>
+
+
